Ajustes psr
